--- a/index.ipynb
+++ b/index.ipynb
@@ -156,11 +156,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Italy'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "italy # 'Italy'"
    ]
@@ -179,6 +190,7 @@
    "outputs": [],
    "source": [
     "mexico = None\n",
+    "mexico = countries[5]\n",
     "mexico"
    ]
   },
