--- a/index.ipynb
+++ b/index.ipynb
@@ -214,23 +214,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['USA', 'Argentina', 'Mexico', 'USA', 'Morocco']"
+       "['USA', 'Argentina', 'Mexico', 'USA']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "kindof_neighbors = None\n",
-    "kindof_neighbors = countries[1:6]\n",
+    "kindof_neighbors = countries[1:5]\n",
     "kindof_neighbors"
    ]
   },
@@ -254,7 +254,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "None # add code here"
+    "country # add code here"
    ]
   },
   {
