--- a/index.ipynb
+++ b/index.ipynb
@@ -250,11 +250,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "country # add code here"
+    "countries.append('Malta') # add code here"
    ]
   },
   {
